--- a/menu_studio.html
+++ b/menu_studio.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="ノーコードツールSTUDIOで制作するサイト3プラン。低価格でとてもスピーディです。">
-    <title>STUDIOによるHP制作</title>
+    <title>STUDIOで作るHP-3プラン</title>
     <link rel="icon" href="images/favicon.png">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" type="image/png" href="images/android-touch-icon.png" sizes="192x192">
@@ -27,16 +27,18 @@
         <div class="mugi">
             <img src="images/mugi-3.svg" style="width: 80%;">
         </div>
-        <h1 style="margin-bottom: 50px;">STUDIOサイト-3PLAN</h1>
         <img src="images/mugi-3.svg" style="width: 100%;">
-        <h3>
-            ノーコードツール「STUDIO」を使ってサイトを制作する3つのプランです<br>
-            コードを書く必要がないことで、3つのプラン全てで低価格とスピーディーさを実現しました
+        <h3 class="sentense orange">
+            <div class="inview fade-in-left">
+                <h1 style="margin-bottom: 50px; text-align: center;">STUDIOで作るHP<br>3プラン</h1>
+                ノーコードツール「STUDIO」を使ってサイトを制作する3つのプランです<br>
+                コードを書く必要がないことで、3つのプラン全てで低価格とスピーディーさを実現しました
+            </div>
         </h3>
         <h2 style="border-bottom: 4px solid #eb5e30; width: fit-content; margin-top: 64px;">
             STUDIOとは？
         </h2>
-        <div class="inview fade-in-left">
+        <div class="sentense inview fade-in-left">
             STUDIOはコードを書くことなくホームページを制作できるシステムです<br>
             ノーコードのホームページ制作ツールは沢山ありますが、私が使った中では「STUDIO」が1番使いやすく、保守性やデザイン性に富んでいます<br>
             用意されているテンプレートもとても良く、サーバーの管理などを気にしなくていいため、
@@ -108,7 +110,7 @@
             <p>チェック＆修正</p>
             <p>独自ドメインの設定</p>
         </div>
-        <div class="area inview fade-in-left">
+        <div class="sentense area inview fade-in-left">
             <h3 class="plan-subtitle">別途かかる費用</h3>
             <p>STUDIOの有料のテンプレートを使用する際はそのテンプレート代</p>
             <p>STUDIOの利用料、月額980円。無料のフリープランもありますが
@@ -156,7 +158,7 @@
             <p>独自ドメインの設定</p>
             <p>管理方法のレクチャー</p>
         </div>
-        <div class="area inview fade-in-left">
+        <div class="sentense area inview fade-in-left">
             <h3 class="plan-subtitle">別途かかる費用</h3>
             <p>STUDIOの有料のテンプレートを使用する際はそのテンプレート代</p>
             <p>STUDIOの利用料、月額2480円。無料のフリープランもありますがCMSのコンテンツ数に制限、
@@ -200,7 +202,7 @@
             <p>独自ドメインの設定</p>
             <p>管理方法のレクチャー</p>
         </div>
-        <div class="area inview fade-in-left">
+        <div class="sentense area inview fade-in-left">
             <h3 class="plan-subtitle">別途かかる費用</h3>
             <p>STUDIOの利用料、月額980円あるいは月額2480円。無料のフリープランもありますがCMSのコンテンツ数に制限、
                 「◯◯◯.com」のような独自のドメインは使えず、画面の端にSTUDIOのバナーが入ります</p>
