--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         </div>
         <ul class="navigation-list" style="border-bottom: 2px solid #48575e;">
           <div style="font-size: 24px; font-weight: bold;">WORKS</div>
-          <a href="menu_studio.html"><div style="margin-left: 12px;">STUDIOで作るホームページ 3プラン</div></a>
+          <a href="menu_studio.html"><div>STUDIOで作るホームページ 3プラン</div></a>
           <li><a href="menu_studio.html#standard" class="navigation-link" style="color: inherit; background-color: #84fff9;">
             スタンダード ¥30,000</a></li>
           <li><a href="menu_studio.html#cms" class="navigation-link" style="color: inherit; background-color: #84fff9;">
             CMS ¥50,000</a></li>
           <li><a href="menu_studio.html#original" class="navigation-link" style="color: inherit; background-color: #84fff9;">
             オリジナル ¥80,000</a></li>
-          <a href="menu_custom.html"><div style="margin-left: 12px;">1から作る完全オリジナルホームページ</div></a>
+          <a href="menu_custom.html"><div>1から作る完全オリジナルホームページ</div></a>
           <li><a href="menu_custom.html" class="navigation-link" style="color: inherit; background-color: #84fff9;">
             カスタム ¥100,000</a></li>
         </ul>
@@ -84,14 +84,14 @@
       </div>
       <ul class="navigation-list" style="border-bottom: 2px solid #48575e;">
         <div style="font-size: 24px; font-weight: bold;">WORKS</div>
-        <a href="menu_studio.html"><div style="margin-left: 12px;">STUDIOで作るホームページ 3プラン</div></a>
+        <a href="menu_studio.html"><div>STUDIOで作るホームページ 3プラン</div></a>
         <li><a href="menu_studio.html#standard" class="navigation-link" style="color: inherit; background-color: #84fff9;">
           スタンダード ¥30,000</a></li>
         <li><a href="menu_studio.html#cms" class="navigation-link" style="color: inherit; background-color: #84fff9;">
           CMS ¥50,000</a></li>
         <li><a href="menu_studio.html#original" class="navigation-link" style="color: inherit; background-color: #84fff9;">
           オリジナル ¥80,000</a></li>
-        <a href="menu_custom.html"><div style="margin-left: 12px;">1から作る完全オリジナルホームページ</div></a>
+        <a href="menu_custom.html"><div>1から作る完全オリジナルホームページ</div></a>
         <li><a href="menu_custom.html" class="navigation-link" style="color: inherit; background-color: #84fff9;">
           カスタム ¥100,000</a></li>
       </ul>
@@ -163,7 +163,7 @@
       <div style="margin-left: 24px; font-size: 1.2em; color: #eb5e30;">最新情報</div>
       <div>
         料金プランの改定を行いました！<br>
-        「テンプレート」「テンプレートCMS」「オリジナル」の3種類のプランでより分かりやすくしました
+        オプションの料金を全体的に変更しました
       </div>
     </div>
     <div style="position: relative; height: 50px;">
@@ -200,9 +200,12 @@
       </div>
     </div>
     <div class="area" style="margin-bottom: 48px;">
-      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2;">ホームページを作った事はありますか？<br>
-        今やホームページを作ることは難しいことではありません<br><br>HTMLやCSSを触らなくても簡単に作るツールはたくさんありますし、SEOやSSLもほとんどセットで簡単に導入できます<br><br>
-        しかしツールを使うにも初めてだと時間や手間はかかってしまいますし<br>サイトを作ってるうちに『もっとオシャレにしたい』などの気持ちになることもあります<br><br>
+      <div class="text-hor inview fade-in-bottom" style="margin: 0 20% 0 4%; line-height: 2;">
+        ホームページを作った事はありますか？<br>
+        今やホームページを作ることは難しいことではありません<br><br>
+        コードを触らなくても簡単に作るツールはたくさんありますし、SEOやSSLもほとんどセットで簡単に導入できます<br><br>
+        しかしツールを使うにも初めてだと時間や手間はかかってしまいますし<br>
+        サイトを作ってるうちに『もっとオシャレにしたい』などの気持ちになることもあります<br><br>
         そんな時はお任せ下さい！<br>シンプルで見やすいホームページでもオシャレなホームページでも皆さんのご要望を叶えます<br>
       </div>
     </div>
@@ -232,15 +235,15 @@
       </div>
       <div class="text-hor inview fade-in-bottom" style="margin: 0 25% 0 4%; line-height: 2;">
         まずはご相談ください！<br>
-        依頼するかどうか悩んでても、質問だけでも大丈夫です<br>
+        依頼するかどうか悩んでても、質問や相談だけでも大丈夫です<br>
         <div style="text-align: right; margin-top: 8px;"><a href="#contact" class="button">お問い合わせ</a></div>
       </div>
     </div>
     <div class="area-vertical" style="margin-bottom: 64px;">
       <div class="area">
-        <div class="text-box inview fade-in-right"style="width: 60%; float: right;">
+        <div class="text-box inview fade-in-right"style="width: 70%; float: right;">
           お問い合わせにて質問の回答や簡単なヒアリングを行った後、依頼をご検討頂いた場合、打ち合わせの日程を決めます<br>
-          時間さえ合えば、その日でも大丈夫です<br>
+          時間さえ合えば、その日でも大丈夫です<br><br>
           ちなみに料金は打ち合わせの段階では発生しませんので、お気軽にどうぞ
         </div>
       </div>
@@ -248,8 +251,8 @@
         <img src="images/arrow.svg" class="inview fade-in-bottom arrow" style="transform: rotateZ(30deg);">
       </div>
       <div class="area">
-        <div class="text-box inview fade-in-left" style="width: 60%;">
-          打ち合わせの基本スタイルは、通信アプリで会話しながら、フリーボードアプリを使って一緒に完成イメージを作っていきます<br>
+        <div class="text-box inview fade-in-left" style="width: 70%;">
+          打ち合わせは基本的に、通信アプリで会話しながら、フリーボードアプリを使って一緒に完成イメージを作っていきます<br><br>
           アプリ等を使ったことがなくても大丈夫、しっかりとご案内いたします<br>
           ご希望があれば、他の打ち合わせ方法でも対応いたします
         </div>
@@ -258,9 +261,11 @@
         <img src="images/arrow.svg" class="inview fade-in-bottom arrow" style="transform: rotateZ(-30deg);">
       </div>
       <div class="area">
-        <div class="text-box inview fade-in-right" style="width: 60%; float: right;">
+        <div class="text-box inview fade-in-right" style="width: 70%; float: right;">
+          この打ち合わせが最も大切です！<br>
           作りたいサイトのイメージが固まってなくても大丈夫です！アイデアのお手伝いをしますので一緒に完成イメージを作りましょう<br><br>
-          またサイトに載せる画像は用意していただきますが、画像が無いなどの場合はご相談ください
+          またサイトに載せる画像は用意していただきますが、画像が無いなどの場合はご相談ください<br><br>
+          この後、制作で使う仕様書を作成します
         </div>
       </div>
     </div>
@@ -276,21 +281,21 @@
     </div>
     <div class="area-vertical" style="margin-bottom: 64px;">
       <div class="area">
-        <div class="text-box inview fade-in-right"style="width: 60%; float: right;">
-          打ち合わせで作った完成のイメージをもとに、仮のサイト制作に取り掛かります<br>
-          サイトの規模にもよりますが、だいたい２週間で完成します<br>
-          テンプレートを使ったページだともっと早くて１週間以内に完成します<br>
+        <div class="text-box inview fade-in-right" style="width: 70%; float: right;">
+          打ち合わせで作った仕様書をもとに、仮のサイト制作に取り掛かります<br>
+          サイトの規模にもよりますが、だいたい２週間で完成します<br><br>
+          STUDIOのテンプレートを使ったページだともっと早くて1週間以内に完成します<br>
         </div>
       </div>
       <div class="area">
         <img src="images/arrow.svg" class="inview fade-in-bottom arrow" style="transform: rotateZ(30deg);">
       </div>
       <div class="area">
-        <div class="text-box inview fade-in-left" style="width: 60%;">
+        <div class="text-box inview fade-in-left" style="width: 70%;">
           完成した仮のサイトを見ながら、再度打ち合わせをしますが<br>
           その前にここで大切なポイントがあります<br><br>
           仮のサイトを修正する前のこの段階で制作を正式に依頼するかどうか決定していただきます<br>
-          一生懸命作りますのでサイトを見てご判断してください<br><br>
+          仮のサイトを見てご判断してください<br><br>
           よろしければ完成に向けた修正作業に入ります<br>
         </div>
       </div>
@@ -298,9 +303,10 @@
         <img src="images/arrow.svg" class="inview fade-in-bottom arrow" style="transform: rotateZ(-30deg);">
       </div>
       <div class="area">
-        <div class="text-box inview fade-in-right" style="width: 60%; float: right;">
-          修正ポイントを直します<br>
+        <div class="text-box inview fade-in-right" style="width: 70%; float: right;">
+          修正ポイントを直します<br><br>
           画像の挿入や調整なども一緒に行います<br>
+          イラストやロゴ制作も希望であれば合わせて行います<br><br>
           修正後は再度打ち合わせをします<br><br>
           基本的に修正回数は２回までとなりますのでご注意ください
         </div>
@@ -313,23 +319,26 @@
       </div>
       <div class="text-hor inview fade-in-bottom" style="margin: 0 25% 0 4%; line-height: 2;">
         サイトが完成しました！<br>
+        ここからはサイトを引き渡すと同時に管理方法やアクセスの解析方法などをしっかりレクチャーします<br><br>
         アフターケアもしっかりと行います<br>
       </div>
     </div>
     <div class="area-vertical" style="margin-bottom: 64px;">
       <div class="area">
-        <div class="text-box inview fade-in-right"style="width: 60%; float: right;">
-          出来上がったサイトをサーバー上にアップして公開します<br>
-          ご希望があればドメインの設定やメールアドレスの設定などもここで行います
+        <div class="text-box inview fade-in-right"style="width: 70%; float: right;">
+          出来上がったサイトをご確認いただいた後、サーバー上にアップして公開します<br><br>
+          ご希望があればドメインの設定やメールアドレスの設定などもここで行います<br>
+          ドメイン関連はプランに含んでいますので別料金はいただきません
         </div>
       </div>
       <div class="area">
         <img src="images/arrow.svg" class="inview fade-in-bottom arrow" style="transform: rotateZ(30deg);">
       </div>
       <div class="area">
-        <div class="text-box inview fade-in-left" style="width: 60%;">
+        <div class="text-box inview fade-in-left" style="width: 70%;">
           今後のサイトの管理の方法やアクセス解析の方法<br>
-          CMSの場合は記事やページの更新方法などのサイトの使い方、運用方法もここでレクチャーします<br>
+          CMSの場合は記事やページの更新方法などのサイトの使い方、運用方法もここでレクチャーします<br><br>
+          ご希望であれば忘れないようにマニュアルにしてお渡しします
         </div>
       </div>
     </div>
